<resources>
    <string name="app_name">Transporta</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Setting</string>
    <string name="all_rights_reserved">Copyright © 2015—2016 SSNB. All Rights Reserved.</string>
    <string name="notification_update">Please fill in today\'s itinerary and send it to us.</string>
    <string name="login_out_time">Sorry，Login timeout</string>
    <string name="net_error_tip">No network connection</string>
    <string name="first_start_dialog_text">Landing on ……</string>
    <string name="yanzhen_dialog">Waiting…</string>
    <string name="explain_btn_getinto">进入应用</string>
    <string name="release_notes">1.history只有在更新后才会显示，不更新就不显示 \n
	    2.更新中没有提示，只有在一定时间后会弹出成功或失败，所以请不要多次点击更新按钮 \n
	    3.因未提供注册和登陆选项所以是以默认账号显示用户数据的
	    4.实验发现在建筑物内、地下会导致定位不准确，从而导致错误的定位判断。且由于在后台可能会导致信息的丢失，但是app在前台运行的时候可以观察到明显的记录\n
	    5.其他界面相关问题，需要讨论后决定</string>
    <string name="loading">Loading…</string>
    <string name="google_service_connection_fail">Unable to connect to Google server</string>
    <string name="google_service_connectioning">Connecting Google server</string>
    <string name="google_service_connectioned">Connect to Google server successfully</string>
    <string name="network_connection_fail">Network connection is not available</string>
    <string name="network_connection_success">Network connection available</string>
    <string name="women">Female</string>
    <string name="men">Male</string>
    <string name="history_btn_sync">Synchronization</string>
    <string name="show_stop_info_reason">The reason for coming here</string>
    <string name="show_stop_info_way">Mode of transportation</string>
    <string name="show_stop_info_content"> </string>
    <string name="show_stop_info_content_example"> </string>
    <string name="show_stop_info_cancle">Cancel</string>
    <string name="show_stop_info_delete">Delete</string>
    <string name="show_stop_info_ok">Confirm</string>
    <string name="update_btn_text">Update</string>
    <string name="update_fail">Update Fail</string>
    <string name="update_success">Update Success</string>
    <string name="AppTitle">Transporta</string>
    <string name="Email">Email:</string>
    <string name="login">Login</string>
    <string name="statement">Transporta is a joint research project between Curtin University,Ninbo University,and the University of Western Australia designed to see how people use public transport and how it can be improved.</string>
    <string name="instructions">instructions for using transporta</string>
    <string name="no_register">Not registered yet?</string>
    <string name="get_register">Get setup</string>
    <string name="point">.</string>
    <string name="register_title">Register for Transporta</string>
    <string name="occupation">Occupation</string>
    <string name="gender">Gender:</string>
    <string name="wa_register">WA_Resident</string>
    <string name="visitor">Visitor</string>
    <string name="age">Age</string>
    <string name="auto_login_fail">Login fail,Please re-login</string>
    <string name="login_fail">Login fail</string>
    <string name="request_fail">Request fail,Please check the network</string>
    <string name="register_btn">Register for Transporta</string>
    <string name="no_email">E-mail is empty</string>
    <string name="email_address_error">Please fill in the correct E-mail address</string>
    <string name="no_occupation">Please fill occupation</string>
    <string name="register_success">Register success</string>
    <string name="register_fail_email_already_have">Register fail,E-mail already have</string>
    <string name="register_fail">Register fail,Please try again later</string>
    <string name="transporta">Transporta</string>


    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>

    <string name="nav_history">History</string>
    <string name="nav_about">About App</string>
    <string name="nav_edit">Edit</string>
    <string name="nav_log_out">Log Out</string>
    <string name="upload">upload</string>
    <string name="question_stop_reason">Why did you stop here?</string>
    <string name="question_stop_way">How did you get here?</string>
    <string name="delete_marker">Delete drop pin</string>

    <string name="login_out_hint">Logout will not delete any data.But we will stop recoding travel.You can still login with this account</string>
    <string name="upload_dialog_hint">Uploading………</string>
    <string name="history_list_title">Here only show you upload the record</string>
    <string name="title_edit">You can edit the last three days of records</string>
    <string name="about_content">Transporta is designed to track your trip routes and automatically detect where you stop during the day.For each stop we ask that you enter some details of how you got to that stop(bus,walk,etc.) and what was your purpose in going there(work,school,shopping,etc.).
        \nTracking is started once you login and the app can safely be left on all day without excessive drain on your battery or data.
    \nNo personal data is saved that could be used to identify any individuals.</string>
    <string name="Other">Other:</string>
</resources>
