<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_marginLeft="20dp"
              android:layout_marginRight="20dp"
              android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:padding="10dp"
        android:textSize="25sp"
        android:text="@string/AppTitle"
        android:textColor="#3f3f3f" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Email" />

    <EditText
        android:id="@+id/login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:padding="5dp"
        android:inputType="textEmailAddress"
        android:background="@drawable/bg_edit_black_border"/>

    <TextView
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_btn_black_gray"
        android:clickable="true"
        android:gravity="center"
        android:padding="5dp"
        android:textSize="18sp"
        android:text="@string/login" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:padding="10dp"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_register"/>
        <TextView
            android:id="@+id/login_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#0080C0"
            android:text="@string/get_register"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/point"/>
    </LinearLayout>


    <TextView android:layout_width="match_parent"
              android:layout_height="0dp"
              android:layout_weight="1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@drawable/shape_dashed_border"
        android:text="@string/statement" />

    <TextView
        android:id="@+id/login_instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/instructions"
        android:layerType="hardware"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

</LinearLayout>