<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/edit_stop_info_scroll"
    android:layout_width="fill_parent"
    android:layout_height="200dp"
    android:layout_gravity="bottom"
    android:alpha="0.5"
    android:background="#ffffff"
    android:visibility="visible" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/show_stop_info_reason"
            android:textColor="#ff7f7f7f"
            android:textSize="12sp" />

        <Spinner
            android:id="@+id/marker_spinner_reson"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="2dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/show_stop_info_way"
            android:textColor="#ff7f7f7f"
            android:textSize="12sp" />

        <Spinner
            android:id="@+id/marker_spinner_way"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="2dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/show_stop_info_content"
            android:textColor="#ff7f7f7f"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/mark_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/show_stop_info_content_example"
            android:textSize="14sp" />
		<include layout="@layout/edit_stop_info_btns"/>
    </LinearLayout>

</ScrollView>