<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="blq.ssnb.trive.activity.EditActivity"
    tools:showIn="@layout/activity_edit">

    <fragment
        android:id="@+id/main_map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.MainActivity"
        android:layout_marginTop="30dp"
        />

    <TextView
        android:id="@+id/ll_tv_history_title"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center"
        android:padding="5dp"
        android:background="@color/gray"
        android:text="@string/title_edit"/>
    <RadioGroup
        android:layout_below="@+id/ll_tv_history_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/radio_day1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Yesterday"/>
        <RadioButton
            android:id="@+id/radio_day2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="The day before yesterday"/>
        <RadioButton
            android:id="@+id/radio_day3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Three days ago"/>

    </RadioGroup>
    <TextView
        android:id="@+id/content_main_btn_upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="50dp"
        android:layout_marginTop="50dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textSize="16sp"
        android:background="@drawable/bg_btn_black_gray"
        android:text="@string/upload"
        android:visibility="visible"
        android:layout_alignParentRight="true"/>
    <LinearLayout
        android:id="@+id/rl_ll_menu_choose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical"
        android:background="@drawable/shape_black_gray_normal"
        android:layout_alignParentBottom="true"
        android:visibility="gone">
        <TextView
            android:id="@+id/rl_ll_tv_reason"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="17sp"
            android:text="@string/question_stop_reason"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/gray"/>
        <TextView
            android:id="@+id/rl_ll_tv_way"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="17sp"
            android:text="@string/question_stop_way"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/gray"/>
        <TextView
            android:id="@+id/rl_ll_tv_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="17sp"
            android:text="@string/delete_marker"/>
    </LinearLayout>


</RelativeLayout>
